# AD-Hacking

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/api/v1/: agent.py  assets.py  files.py  findings.py  terminal.py  wordlists.py
backend/app/core/: __init__.py  config.py
backend/app/findings/: __init__.py
backend/app/importers/: __init__.py
backend/app/models/: __init__.py
backend/app/schemas/: agent.py  asset.py  finding.py  terminal.py  wordlist.py
backend/app/services/: agent_service.py  asset_service.py  finding_service.py  json_store.py  terminal_service.py  wordlist_service.py
docs/: architecture.md  kali-agent-workflow.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/api/: agent.ts  assets.ts  files.ts  findings.ts  terminal.ts  wordlists.ts
frontend/src/components/: AgentPlanPanel.tsx  AssetTable.tsx  FileBrowserPanel.tsx  FindingTable.tsx  MetricCard.tsx  TerminalPanel.tsx  ToolNotebook.tsx  ToolRunsPanel.tsx
frontend/src/styles/: global.css
frontend/src/views/: App.tsx
