[project]
name = "ad-redteam-notes-backend"
version = "0.1.0"
description = "Backend API for AD Red Team Notes"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic-settings>=2.3.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
